@@ -1,3 +1,8 @@
+2004-08-05  Sarfraaz Ahmed <asarfraaz@novell.com>
+	
+	* calendar/e-cal-backend-exchange.c (discard_alarm): Implemented
+	Fixes #45103
+
 2004-08-04  Dan Winship  <danw@novell.com>
 
 	* README: remove "this is SOOOO beta" message since we've been
